--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,10 @@
+main {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 main>img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+    width: 80%;
+    height: auto;
 }
