--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,14 +1,15 @@
 /*----- VARIABLES -----*/
 :root {
-    --EerieBlack: #121824;
-    --Charcoal: #394951;
-    --Aero: #7BB1DF;
-    --ChineseSilver: #CDCCCC;
+    /* Colors */
+    --Fuchsia: #F500FF;
+    --RichBlack: #03061B;
+    --RaisinBlack: #222222;
+    --DarkGray: #A9A9A9;
+    --LightSilver: #D9D9D9;
 }
 
 /*----- SCROLLBAR -----*/
 ::-webkit-scrollbar {
-    width: 5px;
     width: 0px;
 }
 
@@ -18,19 +19,23 @@
 }
 
 ::-webkit-scrollbar-thumb {
-    background: var(--ChineseSilver);
+    background: white;
     border-radius: 10px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-    background: var(--Aero);
+    background: black;
 }
 
 /* -----GENERAL----- */
+* {
+    transition: ease-in-out 0.25s;
+}
+
 html {
-    overflow: hidden;
-    /* overflow-x: hidden; */
+    overflow-x: hidden;
     scroll-behavior: smooth;
+    background-color: var(--RaisinBlack);
 }
 
 body {
@@ -42,20 +47,22 @@ body {
 main {
     min-height: 100vh;
     width: 100vw;
+    background-color: var(--RichBlack);
 }
 
 h1 {
-    font-size: 2rem;
-    font-weight: 500;
-}
-
-h2 {
-    font-size: 1.6rem;
-    font-weight: 500;
-    text-transform: uppercase;
+    font-size: 2em;
+    font-family: "Rubik Glitch", system-ui;
+    font-weight: 400;
+    font-style: normal;
 }
 
 a, p {
     color: white;
     text-decoration: none;
+    font-family: "Open Sans", sans-serif;
+    font-optical-sizing: auto;
+    /*font-weight: <weight> Use a value from 300 to 800;*/
+    font-style: normal;
+    font-variation-settings: "wdth" 100;
 }
