--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -4,8 +4,10 @@
     --Fuchsia: #F500FF;
     --RichBlack: #03061B;
     --RaisinBlack: #222222;
+    --Jet: #343434;
     --DarkGray: #A9A9A9;
     --LightSilver: #D9D9D9;
+    --BrightGray: #E8EAED;
 }
 
 /*----- SCROLLBAR -----*/
@@ -35,7 +37,7 @@
 html {
     overflow-x: hidden;
     scroll-behavior: smooth;
-    background-color: var(--RaisinBlack);
+    background-color: var(--Jet);
 }
 
 body {
@@ -47,22 +49,50 @@ body {
 main {
     min-height: 100vh;
     width: 100vw;
-    background-color: var(--RichBlack);
+    background-color: var(--Jet);
 }
 
 h1 {
+    color: var(--Fuchsia);
     font-size: 2em;
     font-family: "Rubik Glitch", system-ui;
     font-weight: 400;
     font-style: normal;
 }
 
-a, p {
-    color: white;
+h2 {
+    text-decoration: none;
+    font-family: "Open Sans", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 600;
+    font-style: normal;
+    font-variation-settings: "wdth" 100;
+}
+
+a,
+p,
+label {
     text-decoration: none;
     font-family: "Open Sans", sans-serif;
     font-optical-sizing: auto;
     /*font-weight: <weight> Use a value from 300 to 800;*/
     font-style: normal;
     font-variation-settings: "wdth" 100;
+}
+
+input {
+    background-color: var(--BrightGray);
+    border-radius: 5px;
+    border: none;
+    padding: 20px;
+    font-weight: 600;
+}
+
+input[type="checkbox"] {
+    background-color: var(--BrightGray);
+    border-radius: 5px;
+}
+
+input::placeholder {
+    color: var(--DarkGray);
 }
