--- a/css/signin.css
+++ b/css/signin.css
@@ -5,6 +5,7 @@ main {
 }
 
 form {
+    margin-top: -95px;
     background-color: white;
     border-radius: 5px;
     padding: 50px;
@@ -13,6 +14,7 @@ form {
     justify-content: center;
     flex-direction: column;
     width: 60%;
+    max-width: 400px;
 }
 
 form>input {
@@ -22,9 +24,22 @@ form>input {
 
 #stayConnected {
     width: 90%;
+    display: flex;
 }
 
 h2 {
     margin-top: 0;
     margin-bottom: 50px;
+}
+
+button {
+    margin-top: 45px;
+}
+
+#createAccount {
+    margin: 0;
+    margin-top: 45px;
+    margin-bottom: -30px;
+    font-size: 0.8rem;
+    color: var(--DarkGray);
 }
