--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -32,6 +32,11 @@
 /* -----GENERAL----- */
 * {
     transition: ease-in-out 0.25s;
+    text-decoration: none;
+    font-family: "Open Sans", sans-serif;
+    font-optical-sizing: auto;
+    font-style: normal;
+    font-variation-settings: "wdth" 100;
 }
 
 html {
@@ -69,17 +74,6 @@ h2 {
     font-variation-settings: "wdth" 100;
 }
 
-a,
-p,
-label {
-    text-decoration: none;
-    font-family: "Open Sans", sans-serif;
-    font-optical-sizing: auto;
-    /*font-weight: <weight> Use a value from 300 to 800;*/
-    font-style: normal;
-    font-variation-settings: "wdth" 100;
-}
-
 input {
     background-color: var(--BrightGray);
     border-radius: 5px;
@@ -91,8 +85,27 @@ input {
 input[type="checkbox"] {
     background-color: var(--BrightGray);
     border-radius: 5px;
+    width: 1rem;
+    height: 1rem;
 }
 
 input::placeholder {
     color: var(--DarkGray);
+}
+
+input[type="submit"],
+button {
+    border: solid 2px;
+    padding: 5px 10px;
+    border-radius: 5px;
+    font-size: 1em;
+    font-weight: 600;
+    background-color: transparent;
+    cursor: pointer;
+}
+
+input[type="submit"]:hover,
+button:hover {
+    border: solid 2px var(--Fuchsia);
+    color: var(--Fuchsia);
 }
