--- a/css/header.css
+++ b/css/header.css
@@ -78,8 +78,20 @@ header>a>img {
 }
 
 #accountDropdown>a {
-    color: black;
+    color: var(--RichBlack);
     display: flex;
     justify-content: space-between;
     cursor: pointer;
+    font-size: 1rem;
+    font-weight: 500;
+    margin: 5px 0;
+}
+
+#accountDropdown>a>span {
+    color: var(--Jet);
+    width: 100%;
+}
+
+#accountDropdown>a:last-of-type {
+    color: var(--PastelRed);
 }
