--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -8,6 +8,7 @@
     --DarkGray: #A9A9A9;
     --LightSilver: #D9D9D9;
     --BrightGray: #E8EAED;
+    --PastelRed: #FF6767;
 }
 
 /*----- SCROLLBAR -----*/
@@ -55,6 +56,11 @@ main {
     min-height: 100vh;
     width: 100vw;
     background-color: var(--Jet);
+    margin-top: -95px; /* Height of the header */
+}
+
+a, p, h1, h2, h3, h4, h5, h6 {
+    color: var(--RichBlack);
 }
 
 h1 {
@@ -69,9 +75,11 @@ h2 {
     text-decoration: none;
     font-family: "Open Sans", sans-serif;
     font-optical-sizing: auto;
-    font-weight: 600;
+    font-weight: 700;
     font-style: normal;
     font-variation-settings: "wdth" 100;
+    font-size: 2rem;
+    color: var(--RichBlack);
 }
 
 input {
@@ -87,6 +95,7 @@ input[type="checkbox"] {
     border-radius: 5px;
     width: 1rem;
     height: 1rem;
+    cursor: pointer;
 }
 
 input::placeholder {
