--- a/css/signin.css
+++ b/css/signin.css
@@ -5,7 +5,6 @@ main {
 }
 
 form {
-    margin-top: -95px;
     background-color: white;
     border-radius: 5px;
     padding: 50px;
@@ -36,7 +35,7 @@ button {
     margin-top: 45px;
 }
 
-#createAccount {
+#bottomText {
     margin: 0;
     margin-top: 45px;
     margin-bottom: -30px;
