--- a/css/signup.css
+++ b/css/signup.css
@@ -34,6 +34,11 @@ button {
     margin-top: 45px;
 }
 
+#terms {
+    width: 90%;
+    display: flex;
+}
+
 #bottomText {
     margin: 0;
     margin-top: 45px;
