--- a/css/header.css
+++ b/css/header.css
@@ -33,6 +33,10 @@ header>a>img {
     color: var(--Fuchsia);
 }
 
+#menu>a.active, #menu>a:hover {
+    color: var(--Fuchsia);
+}
+
 /* Menu Mobile */
 #burgerMenu {
     display: none;
