:sparkles: Update header

--- a/css/header.css
+++ b/css/header.css
@@ -33,7 +33,7 @@ header>a>img {
     color: var(--Fuchsia);
 }
 
-#menu>a.active, #menu>a:hover {
+#menu>a#active, #menu>a:hover {
     color: var(--Fuchsia);
 }
 
