--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -56,9 +56,10 @@ body {
 
 main {
     min-height: 100vh;
-    width: 100vw;
+    /* width: 100vw; */
     background-color: var(--Jet);
-    /* margin-top: -75px; Height of the header */
+    margin-top: -75px; /* Height of the header */
+    padding: 0px 15vw;
 }
 
 a, p, h1, h2, h3, h4, h5, h6 {
