:lipstick: Update global UI

--- a/css/header.css
+++ b/css/header.css
@@ -4,6 +4,7 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 10px 20px;
+    background-color: var(--RichBlack);
 }
 
 header>a {
