--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -45,7 +45,7 @@
 html {
     overflow-x: hidden;
     scroll-behavior: smooth;
-    background-color: var(--Jet);
+    background-color: var(--RichBlack);
 }
 
 body {
@@ -57,7 +57,7 @@ body {
 main {
     min-height: 100vh;
     /* width: 100vw; */
-    background-color: var(--Jet);
+    background-color: var(--RichBlack);
     margin-top: -75px; /* Height of the header */
     padding: 0px 15vw;
 }
