:lipstick: Update titles

--- a/css/games.css
+++ b/css/games.css
@@ -68,7 +68,7 @@ main {
 #gamesWrapper {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: space-between;
     gap: 3vw;
     margin: 50px 0;
 }
