--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -77,6 +77,8 @@ main {
 a,
 p,
 b,
+ul,
+li,
 h1,
 h2,
 h3,
@@ -84,11 +86,10 @@ h4,
 h5,
 h6 {
     font-family: "Open Sans", sans-serif;
-    color: var(--RichBlack);
+    color: white;
 }
 
 h1 {
-    color: white;
     font-size: 4em;
     font-family: "Open Sans", sans-serif;
     font-weight: 400;
