--- a/css/responsive/header.css
+++ b/css/responsive/header.css
@@ -1,22 +1,40 @@
-@media (max-width: 700px) {
+@media (max-width: 1000px) {
     #menu {
-        background: rebeccapurple;
-        position: absolute;
-        top: 95px;
-        left: 0;
-        width: 100vw;
-        height: 100vh;
-        flex-direction: column;
-        align-items: center;
         display: none;
     }
 
-    #menu.active {
+    #menuMobile.active {
+        background: var(--RaisinBlack);
         display: flex;
+        flex-direction: column;
+        align-items: stretch;
+        position: absolute;
+        top: 95px;
+        left: 0;
+        width: calc(100vw - 50px); /* Largeur ecran moins padding */
+        height: 100vh;
+        padding: 0 25px;
     }
 
     #burgerMenu {
         display: flex;
         align-items: center;
+    }
+
+    #menuMobile>* {
+        font-size: 2rem;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin: 15px 0;
+    }
+
+    #menuMobile img {
+        height: 30px;
+        width: auto;
+    }
+
+    #logout {
+        color: var(--PastelRed);
     }
 }
