--- a/css/support.css
+++ b/css/support.css
@@ -1,10 +1,39 @@
 main {
     display: flex;
-    align-items: center;
+    align-items: stretch;
     justify-content: center;
+    flex-direction: column;
+    margin: 0;
+    padding-top: 50px;
 }
 
-main>img {
-    width: 80%;
-    height: auto;
+form {
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    border: solid 2px var(--Fuchsia);
+    border-radius: 5px;
+    margin-bottom: 50px;
+    padding: 25px 50px;
+}
+
+form>* {
+    margin: 10px 0px;
+}
+
+h2 {
+    position: relative;
+    z-index: 1;
+    background-color: var(--RichBlack);
+    color: white;
+    padding: 0 25px;
+    margin-bottom: -20px;
+    margin-left: 25px;
+    text-align: start;
+    width: fit-content;
+}
+
+button {
+    color: white;
+    border-color: white;
 }
