--- a/css/support.css
+++ b/css/support.css
@@ -1,10 +1,54 @@
 main {
     display: flex;
     align-items: stretch;
-    justify-content: center;
+    justify-content: flex-start;
     flex-direction: column;
     margin: 0;
     padding-top: 50px;
+}
+
+#supportGrid {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    margin: 50px 0;
+}
+
+#supportGrid>div {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: 15pt;
+    padding: 25px;
+    border-radius: 5px;
+    border: solid white 3px;
+    cursor: pointer;
+}
+
+#supportGrid>div:not(:first-child):not(:last-child) {
+    margin: 0 25px;
+}
+
+#supportGrid>div:hover {
+    border: solid transparent 3px;
+    background-image: linear-gradient(to right,
+            var(--RichBlack),
+            var(--RichBlack)),
+        conic-gradient(from var(--angle),
+            var(--Fuchsia) 0deg 90deg,
+           transparent 90deg 180deg,
+            var(--Fuchsia) 180deg 270deg,
+            transparent 270deg 360deg);
+    background-origin: border-box;
+    background-clip: padding-box, border-box;
+    animation: rotate 4s linear infinite;
+}
+
+#supportGrid>div>* {
+    text-align: center;
 }
 
 form {
@@ -15,6 +59,7 @@ form {
     border-radius: 5px;
     margin-bottom: 50px;
     padding: 25px 50px;
+    padding-top: 50px;
 }
 
 form>* {
@@ -36,4 +81,21 @@ h2 {
 button {
     color: white;
     border-color: white;
+}
+
+/* Border Animation */
+:root {
+    --angle: 45deg;
+}
+
+@property --angle {
+    syntax: "<angle>";
+    initial-value: 0deg;
+    inherits: false;
+}
+
+@keyframes rotate {
+    to {
+        --angle: 360deg;
+    }
 }
