--- a/css/footer.css
+++ b/css/footer.css
@@ -45,7 +45,7 @@ footer>div {
 /* Bottom */
 #footerBottom {
     background-color: var(--LightSilver);
-    padding: 10px;
+    padding: 0 10px;
     display: flex;
 }
 
