--- a/css/responsive/header.css
+++ b/css/responsive/header.css
@@ -17,6 +17,10 @@
         opacity: 0;
         animation: fadeIn 0.5s ease-in-out forwards;
     }
+
+    #userId {
+        cursor: pointer;
+    }
     
     @keyframes fadeIn {
         0% {
