--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -63,7 +63,8 @@ main {
     min-height: var(--app-height);
     /* width: 100vw; */
     background-color: var(--RichBlack);
-    margin-top: -75px; /* Height of the header */
+    margin-top: -75px;
+    /* Height of the header */
     padding: 0px 15vw;
     animation: fadeIn 1s ease-in-out;
 }
@@ -158,7 +159,8 @@ b {
     background-color: var(--PastelGreen);
 }
 
-input, textarea {
+input,
+textarea {
     all: unset;
     background-color: var(--BrightGray);
     border-radius: 5px;
@@ -177,12 +179,14 @@ select {
 }
 
 input[type="checkbox"] {
+    all: revert;
     background-color: var(--BrightGray);
     border-radius: 5px;
     width: 1rem;
     height: 1rem;
     cursor: pointer;
     padding: 5px;
+    margin: 0;
     margin-right: 10px;
 }
 
