--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -203,6 +203,7 @@ button {
     font-weight: 600;
     background-color: transparent;
     cursor: pointer;
+    transition: ease-in-out 0.25s;
 }
 
 input[type="submit"]:hover,
