:iphone: Update responsive design

--- a/css/responsive/footer.css
+++ b/css/responsive/footer.css
@@ -9,7 +9,7 @@
 
     #footerBottom {
         display: flex;
-        flex-direction: column;
+        flex-direction: column-reverse;
         align-items: center;
     }
 
