--- a/css/responsive/footer.css
+++ b/css/responsive/footer.css
@@ -26,3 +26,17 @@
         justify-content: space-between;
     }
 }
+
+@media (max-width: 500px) {
+    #footerBottom>*:nth-child(2) {
+        flex-direction: column;
+    }
+
+    #footerBottom>*:nth-child(2)>a:nth-of-type(even) {
+        display: none;
+    }
+
+    #footerBottom>*:nth-child(2)>a:nth-of-type(odd) {
+        margin: 5px 0;
+    }
+}
