--- a/css/support.css
+++ b/css/support.css
@@ -10,7 +10,7 @@ main {
 #supportGrid {
     display: flex;
     flex-direction: row;
-    align-items: center;
+    align-items: stretch;
     justify-content: space-between;
     margin: 50px 0;
 }
@@ -25,6 +25,7 @@ main {
     padding: 25px;
     border-radius: 5px;
     border: solid white 3px;
+    text-transform: lowercase;
     cursor: pointer;
 }
 
@@ -108,6 +109,7 @@ button {
 
 /* FAQ */
 #faq {
+    padding-top: 50px;
     margin-bottom: 50px;
 }
 
