--- a/css/signin.css
+++ b/css/signin.css
@@ -44,7 +44,7 @@ label {
     align-items: center;
 }
 
-#bottomText {
+.bottomText {
     margin: 0;
     margin-top: 45px;
     margin-bottom: -30px;
